Add minwidth to locked image

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -107,6 +107,7 @@ select {
   background-position: center;
   background-image: url('../assets/verylocked.svg');
   height: 40px;
+  min-width: 35px;
   width: 40px;
 }
 
